fixed line spacing for site vs posts and email address color

--- a/themes/digio-theme/assets/css/styles.css
+++ b/themes/digio-theme/assets/css/styles.css
@@ -9,7 +9,7 @@ html {
 body {
   color: #ffffff;
   font-family: 'Fira Code', monospace;
-  line-height: 1.5;
+  line-height: 2.0;
   margin: 0;
   max-width: none;
   font-size: 14px;
@@ -43,6 +43,15 @@ h2 {
   font-weight: bold;
   color: #ffffff;
   margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+/* headings in posts should have more top margin */
+.flex-1 h2,
+.flex-1 h3,
+.flex-1 h4,
+.flex-1 h5,
+.flex-1 h6 {
   margin-top: 1.5rem;
 }
 
@@ -50,7 +59,7 @@ h3 {
   font-size: 16px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -58,7 +67,7 @@ h4 {
   font-size: 14px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -66,7 +75,7 @@ h5 {
   font-size: 12px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -74,7 +83,7 @@ h6 {
   font-size: 10px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -117,7 +126,7 @@ input[type="checkbox"]:checked {
 }
 
 input[type="email"] {
-  color: #000000 !important;
+  color: #000000;
 }
 
 ul {
