--- a/themes/digio-theme/static/css/styles.css
+++ b/themes/digio-theme/static/css/styles.css
@@ -703,6 +703,10 @@ video {
   white-space: nowrap;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -742,6 +746,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -759,6 +768,10 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-3xl {
@@ -825,7 +838,7 @@ html {
 body {
   color: #ffffff;
   font-family: 'Fira Code', monospace;
-  line-height: 1.5;
+  line-height: 2.0;
   margin: 0;
   max-width: none;
   font-size: 14px;
@@ -859,6 +872,16 @@ h2 {
   font-weight: bold;
   color: #ffffff;
   margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+/* headings in posts should have more top margin */
+
+.flex-1 h2,
+.flex-1 h3,
+.flex-1 h4,
+.flex-1 h5,
+.flex-1 h6 {
   margin-top: 1.5rem;
 }
 
@@ -866,7 +889,7 @@ h3 {
   font-size: 16px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -874,7 +897,7 @@ h4 {
   font-size: 14px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -882,7 +905,7 @@ h5 {
   font-size: 12px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -890,7 +913,7 @@ h6 {
   font-size: 10px;
   font-weight: bold;
   color: #ffffff;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -932,6 +955,10 @@ input[type="checkbox"] {
 
 input[type="checkbox"]:checked {
   background-image: url('/checked.png');
+}
+
+input[type="email"] {
+  color: #000000;
 }
 
 ul {
